--- a/KanjiAnalyzer/KanjiAnalyzer.csproj
+++ b/KanjiAnalyzer/KanjiAnalyzer.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
       <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
+      <PackageReference Include="ZstdNet" Version="1.4.5" />
     </ItemGroup>
 
 </Project>
